处理量为排行榜单

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="please_input_old_pwd">请输入旧密码</string>
     <string name="please_input_new_pwd">请输入新密码</string>
     <string name="logining">登录中..</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
